latest 2.21 ryan workflow

--- a/2.21.ryan_i/data_join_workflow.ipynb
+++ b/2.21.ryan_i/data_join_workflow.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta_df = pd.read_csv('2.21.agp_metadata.txt',sep='\\t', low_memory=False)"
+    "meta_df = pd.read_csv('raw.2.21.agp_metadata.txt',sep='\\t', low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "(26009, 597)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "[3 rows x 597 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,8 +597,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### filter on only body_site = FECES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(19604, 597)\n"
+     ]
+    }
+   ],
+   "source": [
+    "meta_df = meta_df[meta_df.body_site == 'UBERON:feces']\n",
+    "print(meta_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +684,7 @@
        "1  10317.000001001  0b0832aafb76068d           10317"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 208,
    "metadata": {
     "scrolled": false
    },
@@ -721,7 +746,7 @@
        "1  10317.000001001  0b0832aafb76068d"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,16 +757,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(176, 597)"
+       "(0, 597)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +878,7 @@
        "1           1        12914  000a1da7d9d7e35b     ANTIBIOTIC_MED  Zymar (gatifloxacin) eye drop (NOT ORAL)                1      J01MA16    J  Antiinfectives for systemic use  Gatifloxacin    NaN"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +965,7 @@
        "12668       12668         1000  48c83b76031b7580    MEDICATION_LIST  lexapro amitriptoline welbutrin                3      N06AX12    N  Nervous system     Bupropion  False"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,14 +1025,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(22807, 599)\n"
+      "(19571, 599)\n"
      ]
     },
     {
@@ -1056,7 +1081,7 @@
        "1       1001  10317.000001001"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1199,7 @@
        "1      12914  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,16 +1227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(61163, 13)"
+       "(50519, 13)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1387,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -1411,14 +1436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(22807, 326)\n"
+      "(19571, 326)\n"
      ]
     },
     {
@@ -1464,7 +1489,7 @@
        "1       1001"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,14 +1502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(22807, 276)\n"
+      "(19571, 276)\n"
      ]
     },
     {
@@ -1873,7 +1898,7 @@
        "[2 rows x 276 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1893,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +2004,7 @@
        "1   True  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1992,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2103,7 @@
        "1   True  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2098,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2123,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2213,7 @@
        "1      12914"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2199,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -2273,7 +2298,7 @@
        "1      43062"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2284,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,16 +2325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
-    "biom_df = pd.read_pickle('2.21.rar1000.biom_data.pkl')"
+    "biom_df = pd.read_pickle('deblur_biom_wflow_output_data/2.21.rar1000.biom_data.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -2322,10 +2347,10 @@
     {
      "data": {
       "text/plain": [
-       "(18305, 112014)"
+       "(18305, 111508)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2337,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2346,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -2374,14 +2399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18273, 112015)\n"
+      "(18273, 111509)\n"
      ]
     }
    ],
@@ -2391,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2407,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -2466,7 +2491,7 @@
        "1  10317.000001001       1001  10317.000001001.59277"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2480,19 +2505,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sample_name_x    0\n",
-       "sample_id        0\n",
-       "sample_name_y    0\n",
+       "sample_name_x    2155\n",
+       "sample_id           0\n",
+       "sample_name_y       0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2526,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2535,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2544,14 +2569,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18273, 112015)\n"
+      "(18273, 111509)\n"
      ]
     }
    ],
@@ -2561,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2570,14 +2595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18273, 112015)\n"
+      "(18273, 111509)\n"
      ]
     }
    ],
@@ -2594,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2603,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2612,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2621,22 +2646,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "sample_id\n",
-       "67572     99\n",
-       "35170     77\n",
-       "97270    114\n",
-       "41721    189\n",
-       "93557    141\n",
+       "67572    604\n",
+       "35170    585\n",
+       "97270    616\n",
+       "41721    705\n",
+       "93557    643\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
