--- a/2.21.ryan_i/deblur_full_biom_workflow.ipynb
+++ b/2.21.ryan_i/deblur_full_biom_workflow.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -35,6 +35,22 @@
     "import sys\n",
     "from qiime2.plugins import feature_table, diversity, emperor\n",
     "pd.options.display.max_colwidth = 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DIRECTORY WHERE TO EXPORT ALL CLEANED UP DATA**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dir = 'deblur_biom_wflow_output_data/'"
    ]
   },
   {
@@ -808,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +842,7 @@
        "426648 x 19231 <class 'biom.table.Table'> with 3606467 nonzero entries (0% dense)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,11 +869,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import skbio\n",
+    "import biom\n",
+    "import argparse\n",
+    "import sys\n",
+    "\n",
+    "__version__='1.0'\n",
+    "\n",
+    "\n",
     "def trim_seqs(seqs, seqlength=100):\n",
+    "    \"\"\"\n",
+    "    Trims the sequences to a given length\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    seqs: generator of skbio.Sequence objects\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    generator of skbio.Sequence objects\n",
+    "        trimmed sequences\n",
+    "    \"\"\"\n",
+    "\n",
     "    for seq in seqs:\n",
     "\n",
     "        if len(seq) < seqlength:\n",
@@ -867,19 +904,21 @@
     "\n",
     "\n",
     "def remove_seqs(table, seqs):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    table : biom.Table\n",
+    "       Input biom table\n",
+    "    seqs : generator, skbio.Sequence\n",
+    "       Iterator of sequence objects to be removed from the biom table.\n",
+    "\n",
+    "    Return\n",
+    "    ------\n",
+    "    biom.Table\n",
+    "    \"\"\"\n",
     "    filter_seqs = {str(s) for s in seqs}\n",
     "    _filter = lambda v, i, m: i not in filter_seqs\n",
     "    return table.filter(_filter, axis='observation', inplace=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "btable = load_table('full_otus/feature-table.biom')\n",
-    "seqs_file = 'bloom/newbloom.all.fna'"
    ]
   },
   {
@@ -888,7 +927,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs = skbio.read(seqs_file, format='fasta')"
+    "table = load_table('full_otus/feature-table.biom')\n",
+    "seqs_file = 'bloom/newbloom.all.fna'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "426648 x 19231 <class 'biom.table.Table'> with 3606467 nonzero entries (0% dense)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table"
    ]
   },
   {
@@ -897,8 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "length = min(map(len, btable.ids(axis='observation')))\n",
-    "seqs = trim_seqs(seqs, seqlength=length)"
+    "seqs = skbio.read(seqs_file, format='fasta')"
    ]
   },
   {
@@ -907,14 +966,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(len(list(seqs)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "20 bloom sequences to try and match for"
+    "length = min(map(len, table.ids(axis='observation')))\n",
+    "seqs = trim_seqs(seqs, seqlength=length)"
    ]
   },
   {
@@ -923,7 +976,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outtable = remove_seqs(btable, seqs)"
+    "outtable = remove_seqs(table, seqs)"
    ]
   },
   {
@@ -955,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,16 +1052,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "112013 x 18305 <class 'biom.table.Table'> with 1755117 nonzero entries (0% dense)"
+       "111507 x 18305 <class 'biom.table.Table'> with 1755714 nonzero entries (0% dense)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1029,8 +1082,8 @@
       "# Constructed from biom file\n",
       "#OTU ID\t10317.000067572.58428\t10317.000035170.60177\t10317.000097270.60853\t10317.000041721.59400\t10317.000093557.57381\n",
       "TACGTATGGTGCAAGCGTTATCCGGATTTACTGGGTGTAAAGGGAGCGCAGGCGGTTTGGCAAGTCTGATGTGAAAATCCGGGGCTCAACTGAGGAACTG\t0.0\t0.0\t0.0\t0.0\t0.0\n",
-      "TACGTATGGAGCAAGCGTTATCCGGATTTACTGGGTGTAAAGGGAGCGTAGACGGACTGGCAAGTCTGATGTGAAAGGCGGGGGCTCAACCCCTGGACTG\t0.0\t0.0\t0.0\t0.0\t0.0\n",
-      "TACGTAGGATCCAAGCGTTATCCGGATTTATTGGGTTTAAAGGGTGCGTAGGCGGTTTAGTAAGTCAGCGGTGAAATTTTGGTGCTTAACACCAAACGTG\t0.0\t0.0\t0.0\t0.0\t0.0\n"
+      "TACGGAGGGTGCAAGCGTTAATCGGAATTACTGGGCGTAAAGCGCGCGCAGGTGGTTCCTTAAGTCTGATGTGAAAGCCCACGGCTTAACCGTGGAGGGT\t0.0\t0.0\t0.0\t0.0\t0.0\n",
+      "TACGAAGGGGGCGAGCGTTGTTCGGAATTACTGGGCGTAAAGGGCGCGTAGGCGGCGCACCAAGTCAGGCGTGAAAGCCCTGGGCTTAACCCAGGAATTG\t0.0\t0.0\t0.0\t0.0\t0.0\n"
      ]
     }
    ],
@@ -1047,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,17 +1118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<18305x112013 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 1755117 stored elements in Compressed Sparse Column format>"
+       "<18305x111507 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 1755714 stored elements in Compressed Sparse Column format>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,14 +1148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18305, 112013)\n"
+      "(18305, 111507)\n"
      ]
     }
    ],
@@ -1112,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1156,15 +1209,15 @@
        "      <th>8</th>\n",
        "      <th>9</th>\n",
        "      <th>...</th>\n",
-       "      <th>112004</th>\n",
-       "      <th>112005</th>\n",
-       "      <th>112006</th>\n",
-       "      <th>112007</th>\n",
-       "      <th>112008</th>\n",
-       "      <th>112009</th>\n",
-       "      <th>112010</th>\n",
-       "      <th>112011</th>\n",
-       "      <th>112012</th>\n",
+       "      <th>111498</th>\n",
+       "      <th>111499</th>\n",
+       "      <th>111500</th>\n",
+       "      <th>111501</th>\n",
+       "      <th>111502</th>\n",
+       "      <th>111503</th>\n",
+       "      <th>111504</th>\n",
+       "      <th>111505</th>\n",
+       "      <th>111506</th>\n",
        "      <th>sample_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1243,16 +1296,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 112014 columns</p>\n",
+       "<p>3 rows × 111508 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    0   1   2   3   4   5   6   7   8   9          ...            112004  \\\n",
+       "    0   1   2   3   4   5   6   7   8   9          ...            111498  \\\n",
        "0 NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN          ...               NaN   \n",
        "1 NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN          ...               NaN   \n",
        "2 NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN          ...               NaN   \n",
        "\n",
-       "   112005  112006  112007  112008  112009  112010  112011  112012  \\\n",
+       "   111499  111500  111501  111502  111503  111504  111505  111506  \\\n",
        "0     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
        "1     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
        "2     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
@@ -1262,10 +1315,10 @@
        "1  10317.000035170.60177  \n",
        "2  10317.000097270.60853  \n",
        "\n",
-       "[3 rows x 112014 columns]"
+       "[3 rows x 111508 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,12 +1331,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**write biom sparse dataframe to pickle file**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdf.to_pickle(output_dir + '2.21.rar1000.biom_data.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## create dna_seq lookup_id which matches the column in cdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1346,22 +1415,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>TACGTATGGAGCAAGCGTTATCCGGATTTACTGGGTGTAAAGGGAGCGTAGACGGACTGGCAAGTCTGATGTGAAAGGCGGGGGCTCAACCCCTGGACTG</td>\n",
+       "      <td>TACGGAGGGTGCAAGCGTTAATCGGAATTACTGGGCGTAAAGCGCGCGCAGGTGGTTCCTTAAGTCTGATGTGAAAGCCCACGGCTTAACCGTGGAGGGT</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>TACGTAGGATCCAAGCGTTATCCGGATTTATTGGGTTTAAAGGGTGCGTAGGCGGTTTAGTAAGTCAGCGGTGAAATTTTGGTGCTTAACACCAAACGTG</td>\n",
+       "      <td>TACGAAGGGGGCGAGCGTTGTTCGGAATTACTGGGCGTAAAGGGCGCGTAGGCGGCGCACCAAGTCAGGCGTGAAAGCCCTGGGCTTAACCCAGGAATTG</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>TACGTAGGGAGCGAGCGTTGTCCGGAATTACTGGGCGTAAAGGGTGCGTGGGCGGCTGTGTAAGTCAGATGTGAAATACCGGGGCTTAACCTCGGGGCTG</td>\n",
+       "      <td>TACGTAGGGTGCGAGCGTTATCCGGAATTATTGGGCGTAAAGAGCTCGTAGGCGGTTTGTCGCGTCTGTCGTGAAAGCCCGGGGCTTAACCCCGGATCTG</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>TACGTAGGATGCAAGCGTTATCCGGAATGACTGGGCGTTAAGGGTGCGTAGGCGGTAAATCAAGTTGGCAGCGTAATTCCGGGGCTTAACTCCGGAACTA</td>\n",
+       "      <td>TACGTATGGAGCAAGCGTTATCCGGATTTACTGGGTGTAAAGGGAGCGTAGACGGACTGGCAAGTCTGATGTGAAAGGCGGGGGCTCAACCCCTGGACTG</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1371,10 +1440,10 @@
       "text/plain": [
        "                                                                                                dna_seq  \\\n",
        "0  TACGTATGGTGCAAGCGTTATCCGGATTTACTGGGTGTAAAGGGAGCGCAGGCGGTTTGGCAAGTCTGATGTGAAAATCCGGGGCTCAACTGAGGAACTG   \n",
-       "1  TACGTATGGAGCAAGCGTTATCCGGATTTACTGGGTGTAAAGGGAGCGTAGACGGACTGGCAAGTCTGATGTGAAAGGCGGGGGCTCAACCCCTGGACTG   \n",
-       "2  TACGTAGGATCCAAGCGTTATCCGGATTTATTGGGTTTAAAGGGTGCGTAGGCGGTTTAGTAAGTCAGCGGTGAAATTTTGGTGCTTAACACCAAACGTG   \n",
-       "3  TACGTAGGGAGCGAGCGTTGTCCGGAATTACTGGGCGTAAAGGGTGCGTGGGCGGCTGTGTAAGTCAGATGTGAAATACCGGGGCTTAACCTCGGGGCTG   \n",
-       "4  TACGTAGGATGCAAGCGTTATCCGGAATGACTGGGCGTTAAGGGTGCGTAGGCGGTAAATCAAGTTGGCAGCGTAATTCCGGGGCTTAACTCCGGAACTA   \n",
+       "1  TACGGAGGGTGCAAGCGTTAATCGGAATTACTGGGCGTAAAGCGCGCGCAGGTGGTTCCTTAAGTCTGATGTGAAAGCCCACGGCTTAACCGTGGAGGGT   \n",
+       "2  TACGAAGGGGGCGAGCGTTGTTCGGAATTACTGGGCGTAAAGGGCGCGTAGGCGGCGCACCAAGTCAGGCGTGAAAGCCCTGGGCTTAACCCAGGAATTG   \n",
+       "3  TACGTAGGGTGCGAGCGTTATCCGGAATTATTGGGCGTAAAGAGCTCGTAGGCGGTTTGTCGCGTCTGTCGTGAAAGCCCGGGGCTTAACCCCGGATCTG   \n",
+       "4  TACGTATGGAGCAAGCGTTATCCGGATTTACTGGGTGTAAAGGGAGCGTAGACGGACTGGCAAGTCTGATGTGAAAGGCGGGGGCTCAACCCCTGGACTG   \n",
        "\n",
        "   lookup_id  \n",
        "0          0  \n",
@@ -1384,7 +1453,7 @@
        "4          4  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,33 +1466,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## final exports"
+    "**write id lookup to csv file**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdf.to_pickle('2.21.rar1000.biom_data.pkl')"
+    "otu_id_df.to_csv(output_dir + '2.21.rar1000.biom_ids.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "otu_id_df.to_csv('2.21.rar1000.biom_ids.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
